# ia25-26-medical-image-unet-segmentation

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json  default.yaml
data/: README.md
docs/: README.md  plan_trabajo_colaborativo.md
docs/proyecto/: memoria.tex
ia25_26_medical_image_unet_segmentation.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: Gymnasium.ipynb  Keras.ipynb  NLTK.ipynb  Numpy_Pandas.ipynb  PDDL.ipynb  README.md  scikit-learn.ipynb
pruebas modelos/: predictions_v1_06689.npz  val_v1_06689.npz
scripts/: demo_pipeline.py  download_busi.py  download_drive.py  evaluate.py  pack_npz.py  predict.py  predict_full.py  prepare_data.py  train.py  validate_data_raw.py
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py  generator.py  patching.py  preprocessing.py
src/evaluation/: __init__.py  inference.py  metrics.py
src/models/: __init__.py  blocks.py  unet.py
src/training/: __init__.py  callbacks.py  train.py
src/utils/: __init__.py  visualization.py
tests/: test_dataset.py  test_evaluation.py  test_patching.py  test_preprocessing.py
